--- a/index.html
+++ b/index.html
@@ -72,10 +72,6 @@
     
     <!-- 5. Babel -->
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-
-    <!-- 6. Lucide Icons (CORREGIDO: Usando una versión específica que expone lucideReact globalmente) -->
-    <script src="https://unpkg.com/lucide@latest"></script>
-    <script src="https://unpkg.com/lucide-react@0.292.0/dist/umd/lucide-react.min.js"></script>
 <script type="importmap">
 {
   "imports": {
@@ -109,9 +105,64 @@
         // Accedemos a las librerías globales de forma segura
         const { useState, useEffect } = React;
         
-        // CORRECCIÓN CRÍTICA: La librería UMD a veces expone 'lucideReact' (minúscula)
-        const LucideIcons = window.lucideReact; 
-        const { TreeDeciduous, ShoppingBag, Plus, Minus, X, Trash2, Phone, ChevronDown } = LucideIcons;
+        // --- ÍCONOS SVG (Reemplazo manual de Lucide para evitar errores de carga) ---
+        const TreeDeciduous = ({ size = 24, className = "", strokeWidth = 2 }) => (
+          <svg width={size} height={size} viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth={strokeWidth} strokeLinecap="round" strokeLinejoin="round" className={className}>
+            <path d="M8 19a4 4 0 0 1-2.24-7.32A3.5 3.5 0 0 1 5 6a3.5 3.5 0 0 1 6-2.3 2.5 2.5 0 0 1 5 2 3.5 3.5 0 0 1 5.24 6A4 4 0 0 1 19 19" />
+            <path d="M12 19v3" />
+            <path d="M12 16v3" />
+          </svg>
+        );
+
+        const ShoppingBag = ({ size = 24, className = "", strokeWidth = 2 }) => (
+          <svg width={size} height={size} viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth={strokeWidth} strokeLinecap="round" strokeLinejoin="round" className={className}>
+            <path d="M6 2 3 6v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V6l-3-4Z" />
+            <path d="M3 6h18" />
+            <path d="M16 10a4 4 0 0 1-8 0" />
+          </svg>
+        );
+
+        const Plus = ({ size = 24, className = "", strokeWidth = 2 }) => (
+          <svg width={size} height={size} viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth={strokeWidth} strokeLinecap="round" strokeLinejoin="round" className={className}>
+            <path d="M5 12h14" />
+            <path d="M12 5v14" />
+          </svg>
+        );
+
+        const Minus = ({ size = 24, className = "", strokeWidth = 2 }) => (
+          <svg width={size} height={size} viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth={strokeWidth} strokeLinecap="round" strokeLinejoin="round" className={className}>
+            <path d="M5 12h14" />
+          </svg>
+        );
+
+        const X = ({ size = 24, className = "", strokeWidth = 2 }) => (
+          <svg width={size} height={size} viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth={strokeWidth} strokeLinecap="round" strokeLinejoin="round" className={className}>
+            <path d="M18 6 6 18" />
+            <path d="m6 6 12 12" />
+          </svg>
+        );
+
+        const Trash2 = ({ size = 24, className = "", strokeWidth = 2 }) => (
+          <svg width={size} height={size} viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth={strokeWidth} strokeLinecap="round" strokeLinejoin="round" className={className}>
+            <path d="M3 6h18" />
+            <path d="M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6" />
+            <path d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2" />
+            <line x1="10" x2="10" y1="11" y2="17" />
+            <line x1="14" x2="14" y1="11" y2="17" />
+          </svg>
+        );
+
+        const Phone = ({ size = 24, className = "", fill="none" }) => (
+          <svg width={size} height={size} viewBox="0 0 24 24" fill={fill} stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round" className={className}>
+            <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z" />
+          </svg>
+        );
+
+        const ChevronDown = ({ size = 24, className = "", strokeWidth = 2 }) => (
+          <svg width={size} height={size} viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth={strokeWidth} strokeLinecap="round" strokeLinejoin="round" className={className}>
+            <path d="m6 9 6 6 6-6" />
+          </svg>
+        );
 
         // --- CONSTANTES ---
         const WHATSAPP_NUMBER = "5491167474299";
